--- a/templates/index.html
+++ b/templates/index.html
@@ -229,7 +229,7 @@
         }
 
         #avg-occupancy li, #slot-utilization li {
-            background-color: rgba(75, 85, 99, 0.6);
+            background-color:white;
         }
 
         body {
