--- a/templates/index.html
+++ b/templates/index.html
@@ -229,7 +229,8 @@
         }
 
         #avg-occupancy li, #slot-utilization li {
-            background-color:white;
+            background-color:rgba(0,0,0,0.9);
+            color:white;
         }
 
         body {
